# lzy-langgraph

./:  .gitignore  .gitignore  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-05-24-phase01-implementation.md
docs/superpowers/specs/: 2026-05-24-langchain-learning-plan.md
phase01/: 01_hello_agent.py  debug_stream.py
