[project]
name = "lzy-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.28.1",
]
